@@ -38,4 +38,4 @@ hashbrown = { version = "0.11", features = ["rayon", "serde", "nightly"] }
 
 ## logging
 termcolor = { version = "1.1", optional = true }
-common-frontend = { package = "veloren-common-frontend", path = "../common/frontend", optional = true }
+#common-frontend = { package = "veloren-common-frontend", path = "../common/frontend", optional = true }
