@@ -30,7 +30,7 @@ client = {package = "veloren-client", path = "../client"}
 common = {package = "veloren-common", path = "../common"}
 common-base = {package = "veloren-common-base", path = "../common/base"}
 common-ecs = {package = "veloren-common-ecs", path = "../common/ecs"}
-common-frontend = {package = "veloren-common-frontend", path = "../common/frontend"}
+#common-frontend = {package = "veloren-common-frontend", path = "../common/frontend"}
 common-net = {package = "veloren-common-net", path = "../common/net"}
 common-systems = {package = "veloren-common-systems", path = "../common/systems"}
 common-state = {package = "veloren-common-state", path = "../common/state"}
